[gd_scene load_steps=8 format=2]

[ext_resource path="res://misc/line-text-small.tres" type="DynamicFont" id=1]
[ext_resource path="res://misc/line-text.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Parts/M77-In_Game_Pawn_Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/Arcade/Scripts/HUD_02_VBox_In_Game.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=3]
resource_name = "Coin_Up"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("HBox_Coin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}

[node name="VBox_In_Game" type="VBoxContainer"]
margin_right = 220.0
margin_bottom = 412.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox_Player" type="HBoxContainer" parent="."]
margin_right = 225.0
margin_bottom = 37.0
alignment = 1

[node name="Label_Player_Text" type="Label" parent="HBox_Player"]
margin_left = 30.0
margin_right = 170.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Player "
align = 1

[node name="Label_Player_Count" type="Label" parent="HBox_Player"]
margin_left = 174.0
margin_right = 194.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="Label_Insert_Coin" type="Label" parent="."]
margin_top = 41.0
margin_right = 225.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "insert coin"
align = 1

[node name="Label_Press_Start" type="Label" parent="."]
margin_top = 82.0
margin_right = 225.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="HBox_Select" type="HBoxContainer" parent="."]
margin_top = 123.0
margin_right = 225.0
margin_bottom = 160.0
alignment = 1

[node name="Label_Select_Text_1" type="Label" parent="HBox_Select"]
margin_left = 42.0
margin_right = 182.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Select "
align = 1

[node name="Label_Select_Text_3" type="Label" parent="HBox_Select"]
visible = false
margin_left = 147.0
margin_right = 158.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "["
align = 1

[node name="Label_Select_Count" type="Label" parent="HBox_Select"]
visible = false
margin_left = 154.0
margin_right = 194.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "00"
align = 1

[node name="Label_Select_Text_2" type="Label" parent="HBox_Select"]
visible = false
margin_left = 176.0
margin_right = 187.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "]"
align = 1

[node name="Label_Ready" type="Label" parent="."]
margin_top = 164.0
margin_right = 225.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 2 )
text = "Ready !"
align = 1

[node name="HBox_Coin" type="HBoxContainer" parent="."]
margin_top = 205.0
margin_right = 225.0
margin_bottom = 242.0
alignment = 1

[node name="Label_Coin_Text_1" type="Label" parent="HBox_Coin"]
margin_left = 43.0
margin_right = 142.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Coin ["
align = 1

[node name="Label_Coin_Count" type="Label" parent="HBox_Coin"]
margin_left = 146.0
margin_right = 166.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="Label_Coin_Text_2" type="Label" parent="HBox_Coin"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "]"
align = 1

[node name="Label_Dead" type="Label" parent="."]
margin_top = 246.0
margin_right = 225.0
margin_bottom = 283.0
custom_fonts/font = ExtResource( 2 )
text = "DEAD"
align = 1

[node name="HBox_Continue" type="HBoxContainer" parent="."]
margin_top = 287.0
margin_right = 225.0
margin_bottom = 324.0
alignment = 1

[node name="Label_Continue_Text_1" type="Label" parent="HBox_Continue"]
margin_left = 3.0
margin_right = 182.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Continue ["
align = 1

[node name="Label_Coin_Count" type="Label" parent="HBox_Continue"]
margin_left = 186.0
margin_right = 206.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="Label_Coin_Text_2" type="Label" parent="HBox_Continue"]
margin_left = 210.0
margin_right = 221.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "]"
align = 1

[node name="Pawn_Menu" parent="." instance=ExtResource( 3 )]
margin_top = 328.0
margin_right = 225.0
margin_bottom = 368.0

[node name="VBox_Game" type="VBoxContainer" parent="."]
margin_top = 372.0
margin_right = 225.0
margin_bottom = 452.0

[node name="HBox_Player" type="HBoxContainer" parent="VBox_Game"]
margin_right = 225.0
margin_bottom = 16.0
alignment = 1

[node name="Label_Player_Text" type="Label" parent="VBox_Game/HBox_Player"]
margin_left = 74.0
margin_right = 137.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Player "
align = 1

[node name="Label_Player_Count" type="Label" parent="VBox_Game/HBox_Player"]
margin_left = 141.0
margin_right = 150.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="HBox_Score" type="HBoxContainer" parent="VBox_Game"]
margin_top = 20.0
margin_right = 225.0
margin_bottom = 36.0
alignment = 1

[node name="Label_Score_Text" type="Label" parent="VBox_Game/HBox_Score"]
margin_left = 73.0
margin_right = 139.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Score : "
align = 1

[node name="Label_Score_Count" type="Label" parent="VBox_Game/HBox_Score"]
margin_left = 143.0
margin_right = 152.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="HBox_for_NRG" type="HBoxContainer" parent="VBox_Game"]
margin_top = 40.0
margin_right = 225.0
margin_bottom = 60.0
alignment = 1

[node name="NRG_Bar" type="ProgressBar" parent="VBox_Game/HBox_for_NRG"]
margin_left = 62.0
margin_right = 162.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HBox_Ammo" type="HBoxContainer" parent="VBox_Game"]
margin_top = 64.0
margin_right = 225.0
margin_bottom = 80.0
alignment = 1

[node name="Label_Ammo_Text" type="Label" parent="VBox_Game/HBox_Ammo"]
margin_left = 75.0
margin_right = 136.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Ammo : "
align = 1

[node name="Label_Ammo_Count" type="Label" parent="VBox_Game/HBox_Ammo"]
margin_left = 140.0
margin_right = 149.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="HBox_Coin" type="HBoxContainer" parent="VBox_Game"]
visible = false
margin_top = 84.0
margin_right = 225.0
margin_bottom = 100.0
alignment = 1

[node name="Label_Coin_Text" type="Label" parent="VBox_Game/HBox_Coin"]
margin_left = 79.0
margin_right = 123.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Coin ["
align = 1

[node name="Label_Coin_Count" type="Label" parent="VBox_Game/HBox_Coin"]
margin_left = 127.0
margin_right = 136.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="Label_Coin_Text2" type="Label" parent="VBox_Game/HBox_Coin"]
margin_left = 140.0
margin_right = 145.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "]"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBox_Game"]
anims/Coin_Up = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 456.0
margin_right = 225.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
